[project]
name = "csp-scanner"
version = "0.1.0"
description = "Cash Secured Put Scanner"
authors = [
    {name = "Terry",email = "ummterry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-insync (>=0.9.86,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
